Make deployment ready