@@ -5,7 +5,7 @@
 	<groupId>de.jangassen</groupId>
 	<artifactId>nsmenufx</artifactId>
 	<name>NSMenuFX</name>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0-BETA1</version>
 	<packaging>bundle</packaging>
 	<description>NSMenuFX is a simple library allowing to access and modify the menu items that are generated by default for OS X applications</description>
 	<url>https://github.com/0x4a616e/NSMenuFX</url>
@@ -55,6 +55,14 @@
 				<configuration>
 					<source>11</source>
 					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>--add-opens nsmenufx/de.jangassen.platform.mac.convert=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
